Created overall html info and CSS framework. CSS has some basic alignment and color

--- a/index.html
+++ b/index.html
@@ -2,12 +2,61 @@
  <html lang="en">
   <head>
 	<meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
 	<title>"Landing_Page"</title>
   </head>
+
+
   
   <body>
-	This is going to be tough.
+
+    <div class="header">
+      <div class="tophead">
+        <p> Header Logo</p>
+        <p> header link one</p>
+        <p> header link two</p>
+        <p> header link three</p>
+      </div>
+
+     <div class="hook">
+       <h1> This website is awesome</h1>
+        <p> This website has some subtext that goes here under the main title. 
+            It's a smaller font and the color is lower contrast.</p>
+        <p>Placeholder Image</p>
+        <div class="button">Sign up</div>
+     </div>   
+    </div>
+
+    <div class="content">
+      Some random information.
+      <div class="images">
+        <ul>
+          <li>Image <p>this is some subtext under an illustration or image</p> </li>
+          <li>Image <p>this is some subtext under an illustration or image</p></li>
+          <li>Image <p>this is some subtext under an illustration or image</p></li>
+          <li>Image <p>this is some subtext under an illustration or image</p></li>
+        </ul>
+      </div>
+      <div class="quote">This is an inspiring quote, or a testimonial from a customer. 
+        Mayber it's just filling up space, or maybe people will actually read it. 
+        Who knows? All I know is that it looks nice.<div class="cite">Thor, God of Thunder </div> </div>
+      
+    </div>
+
+    <div class="end">
+      <div class="ad">
+        <h1>Call to action! It's time!</h1>
+        Sign up for product by clicking that button right over there!
+        <div class="adbutton">Sign up</div>
+      </div>
+    </div>
+
+    <div class="footer">
+      Copyright &#169; The Phat Moobs 2022
+    </div>
+
   </body>
+
 
 </html>
 	
